# wdp-cli

./: .gitignore  Cargo.toml  my_file
src/: main.rs
wdp-dotnet/: NativeMethods.txt  Program.cs  wdp-dotnet.sln  wdp.csproj
wdp-rust/: .gitignore
wdp-rust/src/: main.rs
