[package]
name = "wdp-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
windows = { version = "0.34.0", features = ["alloc", "Security_Cryptography_DataProtection", "Foundation", "Storage_Streams", "Win32_System_WinRT"] }
